--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav id="cont" class="navbar navbar-expand-lg " >
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html"><img class="logo" src="../assets/logo.png" alt="abctravels"></a>
+          <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/logo.png" alt="abctravels"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -25,9 +25,9 @@
                   Destinations
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./ind.html">India</a></li>
-                  <li><a class="dropdown-item" href="./int.html">International</a></li>
-                  <li><a class="dropdown-item" href="./isl.html">Islands</a></li>
+                  <li><a class="dropdown-item" href="./static/ind.html">India</a></li>
+                  <li><a class="dropdown-item" href="./static/int.html">International</a></li>
+                  <li><a class="dropdown-item" href="./static/isl.html">Islands</a></li>
                   
                 </ul>
                 
