--- a/italy.html
+++ b/italy.html
@@ -13,7 +13,7 @@
 <body>
     <nav id="cont" class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html"><img class="logo" src="../assets/logo.png" alt="abctravels"
+            <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/logo.png" alt="abctravels"
                     height="30"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -132,7 +132,7 @@
             <hr>
             <div class="int-container ">
                 <div class="card zoom-effect " style="width: 18rem;">
-                    <img src="../assets/italypackage.jpg " class="card-img-top" alt="...">
+                    <img src="./assets/italypackage.jpg " class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">BEST OF ITALY</h5>
                         <p class="card-text">Explore italy mains with this package .</p>
