--- a/australia.html
+++ b/australia.html
@@ -11,7 +11,7 @@
 <body>
     <nav id="cont" class="navbar navbar-expand-lg " >
         <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html"><img class="logo" src="../assets/logo.png" alt="abctravels"></a>
+          <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/logo.png" alt="abctravels"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -64,16 +64,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../assets/australia1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/australia1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/australia2.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/australia2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/australia.avif" class="d-block w-100" alt="...">
+                        <img src="./assets/australia.avif" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/australia4.webp" class="d-block w-100" alt="...">
+                        <img src="./assets/australia4.webp" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
