--- a/grece.html
+++ b/grece.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thailand</title>
+    <title>Greece</title>
     <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 <body>
     <nav id="cont" class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html"><img class="logo" src="../assets/logo.png" alt="abctravels"
+            <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/logo.png" alt="abctravels"
                     height="30"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -32,6 +32,7 @@
                             <li><a class="dropdown-item" href="./ind.html">India</a></li>
                             <li><a class="dropdown-item" href="./int.html">International</a></li>
                             <li><a class="dropdown-item" href="./isl.html">Islands</a></li>
+
                         </ul>
 
                     </li>
@@ -70,16 +71,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../assets/thai1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/greece1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/thai2.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/greece2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/thai3.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/greece3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/thai4.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/greece4.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -98,20 +99,26 @@
 
     <section class="about ">
         <div class="container">
-        <H2 class="mt-5">ABOUT THAILAND</H2>
+        <H2 class="mt-5">ABOUT GREECE</H2>
             <hr>
-            <p>Tourism is an economic contributor to the Kingdom of Thailand. Estimates of tourism revenue directly contributing to the GDP of 12 trillion baht range from one trillion baht (2013) 2.53 trillion baht (2016), the equivalent of 9% to 17.7% of GDP When including indirect travel and tourism receipts, the 2014 total is estimated to be the equivalent of 19.3% (2.3 trillion baht) of Thailand's GDP.   
-            </p>
+            <p>Tourism in Greece has been a key element of the economic activity in the country, and is one of the country's most important sectors. Greece has been a major tourist destination and attraction in Europe since the 1970s for its rich culture and history, which is reflected in large part by its 18 UNESCO World Heritage Sites, among the most in Europe and the world as well as for its long coastline, many islands, and beaches.</p>
             <p>
-                Elephant trekking has been an attraction for tourists in Thailand for decades. Ever since logging in Thailand was banned in 1989, elephants were brought into camps to put on shows for tourists and to give them rides. The majority of these elephants once used to work in the logging industry. After the government banned logging, many mahouts were then unable to care for their elephants and left them in the wild. After tourism in the country rose, elephants came back into demand. The tourism boom gave elephants a place to work and be cared for. Today there are an estimated 3,000 to 4,000 domesticated elephants in the country.
+                
+                Greece is one of Europe's most popular LGBT tourist destinations. The religious tourism and pilgrimages, the ecotourism, the conference tourism, and the medical tourism are prominent, and initiatives are being made to promote the seasonal tourism as well. Some of the country's major tourist destinations include the capital city Athens, the islands of Santorini, Mykonos, Rhodes, Corfu and Crete, as well as the peninsula of Chalkidice. 
+                <br>
+                Tourism in modern-day Greece started to flourish in the 1960s and 1970s, in what became known as mass tourism.[9] During that time, large-scale construction projects for hotels and other such facilities were undertaken, and the country saw an increase in international tourists over the years. International events such as the 2004 Summer Olympic Games and the Eurovision Song Contest 2006, both held in Athens, greatly helped to boost tourism in the country, while large-scale nationally funded cultural infrastructure such as the New Acropolis Museum also contributed to the flow of tourists in the country. Thessaloniki was the European Youth Capital in 2014.
             </p>
-            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN THAILAND</strong></p>
-            <li>Bangkok</li>
-            <li>Chiang Mai</li>
-            <li>Phuket</li>
-            <li>Ayutthaya</li>
-            <li>Kanchanaburi</li>
-            <li>Krabi</li>
+            <p>Greece has a Mediterranean climate along its coasts and islands. Once inland, many areas and cities experience a continental climate.
+
+                Summers are usually hot and dry, while winters are generally mild and wet. Northern Greece can experience cold winters, while Southern Greece and the islands experience considerably milder winters.
+            </p>
+            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN GREECE</strong></p>
+            <li>Acropolis of Athens</li>
+            <li>Parthenon</li>
+            <li>Meteora</li>
+            <li>Tholos of Athena Pronaia</li>
+            <li>The Athenian Treasury</li>
+            <li>Santorini</li>
     </section>
     </div>
     <section>
@@ -120,10 +127,10 @@
             <hr>
             <div class="int-container ">
                 <div class="card zoom-effect " style="width: 18rem;">
-                    <img src="../assets/thailandtitle.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/int-6.jpg " class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">BEST OF THAILAND</h5>
-                        <p class="card-text">Explore Thailand mains with this package .</p>
+                        <h5 class="card-title">BEST OF GREECE</h5>
+                        <p class="card-text">Explore Greece mains with this package .</p>
                         <a href="#" class="btn btn-primary">Explore</a>
                     </div>
                 </div>
