--- a/spain.html
+++ b/spain.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greece</title>
-    <link rel="stylesheet" href="../styles.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-
 <body>
     <nav id="cont" class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html"><img class="logo" src="../assets/logo.png" alt="abctravels"
+            <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/logo.png" alt="abctravels"
                     height="30"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,10 +27,9 @@
                             Destinations
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./ind.html">India</a></li>
-                            <li><a class="dropdown-item" href="./int.html">International</a></li>
-                            <li><a class="dropdown-item" href="./isl.html">Islands</a></li>
-
+                            <li><a class="dropdown-item" href="../ind.html">India</a></li>
+                            <li><a class="dropdown-item" href="../int.html">International</a></li>
+                            <li><a class="dropdown-item" href="../isl.html">Islands</a></li>
                         </ul>
 
                     </li>
@@ -71,16 +68,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../assets/greece1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/spain1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/greece2.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/spain2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/greece3.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/spain3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/greece4.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/spain4.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -99,26 +96,24 @@
 
     <section class="about ">
         <div class="container">
-        <H2 class="mt-5">ABOUT GREECE</H2>
+        <H2 class="mt-5">ABOUT SPAIN</H2>
             <hr>
-            <p>Tourism in Greece has been a key element of the economic activity in the country, and is one of the country's most important sectors. Greece has been a major tourist destination and attraction in Europe since the 1970s for its rich culture and history, which is reflected in large part by its 18 UNESCO World Heritage Sites, among the most in Europe and the world as well as for its long coastline, many islands, and beaches.</p>
+            <p>Tourism in Spain is a major contributor to national economic life, contributing to about 11.8% of Spain's GDP (in 2017). Ever since the 1960s and 1970s, the country has been a popular destination for summer holidays, especially with large numbers of tourists from the United Kingdom, Ireland, Turkey, France, Germany, Italy, the Benelux, and the United States, among others. Accordingly, Spain's foreign tourist industry has grown into the second-biggest in the world.</p>
             <p>
-                
-                Greece is one of Europe's most popular LGBT tourist destinations. The religious tourism and pilgrimages, the ecotourism, the conference tourism, and the medical tourism are prominent, and initiatives are being made to promote the seasonal tourism as well. Some of the country's major tourist destinations include the capital city Athens, the islands of Santorini, Mykonos, Rhodes, Corfu and Crete, as well as the peninsula of Chalkidice. 
-                <br>
+                Spain ranks first among 140 countries in the biannual Travel and Tourism Competitiveness Index published by the World Economic Forum in 2019, matching the top position already achieved in 2017 and 2015<br>
                 Tourism in modern-day Greece started to flourish in the 1960s and 1970s, in what became known as mass tourism.[9] During that time, large-scale construction projects for hotels and other such facilities were undertaken, and the country saw an increase in international tourists over the years. International events such as the 2004 Summer Olympic Games and the Eurovision Song Contest 2006, both held in Athens, greatly helped to boost tourism in the country, while large-scale nationally funded cultural infrastructure such as the New Acropolis Museum also contributed to the flow of tourists in the country. Thessaloniki was the European Youth Capital in 2014.
             </p>
-            <p>Greece has a Mediterranean climate along its coasts and islands. Once inland, many areas and cities experience a continental climate.
+            <p>Most festivals turn around patron saints, legends, local customs and folklore. Among the most singular ones stand out the Seville Fair (Feria de Abril in Spanish), the Romería de El Rocío in Almonte, Huelva, the world-famous running of the bulls in Pamplona, the Falles in Valencia, the Tomatina in Buñol, Valencia and the Fiestas del Pilar in Zaragoza.
 
-                Summers are usually hot and dry, while winters are generally mild and wet. Northern Greece can experience cold winters, while Southern Greece and the islands experience considerably milder winters.
+                Spain is the second largest country in the European Union. Its latitude puts part of the country in direct contact with the typical southern end of the Atlantic polar jet. Hence, Spain's geographical position allows for Atlantic fronts typically affecting its western and northern part whereas a Mediterranean influenced climate is generally prevalent in its eastern and southern parts, with transition climates linking both main bioclimatic regions.
             </p>
-            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN GREECE</strong></p>
-            <li>Acropolis of Athens</li>
-            <li>Parthenon</li>
-            <li>Meteora</li>
-            <li>Tholos of Athena Pronaia</li>
-            <li>The Athenian Treasury</li>
-            <li>Santorini</li>
+            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN SPAIN</strong></p>
+            <li>Barcelona:</li>
+            <li>Seville</li>
+            <li>Granada</li>
+            <li>Madrid</li>
+            <li>Toledo</li>
+            <li>San Sebastian</li>
     </section>
     </div>
     <section>
@@ -127,10 +122,10 @@
             <hr>
             <div class="int-container ">
                 <div class="card zoom-effect " style="width: 18rem;">
-                    <img src="../assets/int-6.jpg " class="card-img-top" alt="...">
+                    <img src="./assets/spainpackage.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">BEST OF GREECE</h5>
-                        <p class="card-text">Explore Greece mains with this package .</p>
+                        <h5 class="card-title">BEST OF SPAIN</h5>
+                        <p class="card-text">Explore Spain mains with this package .</p>
                         <a href="#" class="btn btn-primary">Explore</a>
                     </div>
                 </div>
@@ -140,6 +135,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-</body>
 
+</body>
 </html>
