--- a/thailand.html
+++ b/thailand.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
+    <title>Thailand</title>
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
     <nav id="cont" class="navbar navbar-expand-lg ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html"><img class="logo" src="../assets/logo.png" alt="abctravels"
+            <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/logo.png" alt="abctravels"
                     height="30"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -27,9 +29,9 @@
                             Destinations
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../ind.html">India</a></li>
-                            <li><a class="dropdown-item" href="../int.html">International</a></li>
-                            <li><a class="dropdown-item" href="../isl.html">Islands</a></li>
+                            <li><a class="dropdown-item" href="./ind.html">India</a></li>
+                            <li><a class="dropdown-item" href="./int.html">International</a></li>
+                            <li><a class="dropdown-item" href="./isl.html">Islands</a></li>
                         </ul>
 
                     </li>
@@ -68,16 +70,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../assets/spain1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/thai1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/spain2.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/thai2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/spain3.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/thai3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/spain4.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/thai4.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -96,24 +98,20 @@
 
     <section class="about ">
         <div class="container">
-        <H2 class="mt-5">ABOUT SPAIN</H2>
+        <H2 class="mt-5">ABOUT THAILAND</H2>
             <hr>
-            <p>Tourism in Spain is a major contributor to national economic life, contributing to about 11.8% of Spain's GDP (in 2017). Ever since the 1960s and 1970s, the country has been a popular destination for summer holidays, especially with large numbers of tourists from the United Kingdom, Ireland, Turkey, France, Germany, Italy, the Benelux, and the United States, among others. Accordingly, Spain's foreign tourist industry has grown into the second-biggest in the world.</p>
+            <p>Tourism is an economic contributor to the Kingdom of Thailand. Estimates of tourism revenue directly contributing to the GDP of 12 trillion baht range from one trillion baht (2013) 2.53 trillion baht (2016), the equivalent of 9% to 17.7% of GDP When including indirect travel and tourism receipts, the 2014 total is estimated to be the equivalent of 19.3% (2.3 trillion baht) of Thailand's GDP.   
+            </p>
             <p>
-                Spain ranks first among 140 countries in the biannual Travel and Tourism Competitiveness Index published by the World Economic Forum in 2019, matching the top position already achieved in 2017 and 2015<br>
-                Tourism in modern-day Greece started to flourish in the 1960s and 1970s, in what became known as mass tourism.[9] During that time, large-scale construction projects for hotels and other such facilities were undertaken, and the country saw an increase in international tourists over the years. International events such as the 2004 Summer Olympic Games and the Eurovision Song Contest 2006, both held in Athens, greatly helped to boost tourism in the country, while large-scale nationally funded cultural infrastructure such as the New Acropolis Museum also contributed to the flow of tourists in the country. Thessaloniki was the European Youth Capital in 2014.
+                Elephant trekking has been an attraction for tourists in Thailand for decades. Ever since logging in Thailand was banned in 1989, elephants were brought into camps to put on shows for tourists and to give them rides. The majority of these elephants once used to work in the logging industry. After the government banned logging, many mahouts were then unable to care for their elephants and left them in the wild. After tourism in the country rose, elephants came back into demand. The tourism boom gave elephants a place to work and be cared for. Today there are an estimated 3,000 to 4,000 domesticated elephants in the country.
             </p>
-            <p>Most festivals turn around patron saints, legends, local customs and folklore. Among the most singular ones stand out the Seville Fair (Feria de Abril in Spanish), the Romería de El Rocío in Almonte, Huelva, the world-famous running of the bulls in Pamplona, the Falles in Valencia, the Tomatina in Buñol, Valencia and the Fiestas del Pilar in Zaragoza.
-
-                Spain is the second largest country in the European Union. Its latitude puts part of the country in direct contact with the typical southern end of the Atlantic polar jet. Hence, Spain's geographical position allows for Atlantic fronts typically affecting its western and northern part whereas a Mediterranean influenced climate is generally prevalent in its eastern and southern parts, with transition climates linking both main bioclimatic regions.
-            </p>
-            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN SPAIN</strong></p>
-            <li>Barcelona:</li>
-            <li>Seville</li>
-            <li>Granada</li>
-            <li>Madrid</li>
-            <li>Toledo</li>
-            <li>San Sebastian</li>
+            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN THAILAND</strong></p>
+            <li>Bangkok</li>
+            <li>Chiang Mai</li>
+            <li>Phuket</li>
+            <li>Ayutthaya</li>
+            <li>Kanchanaburi</li>
+            <li>Krabi</li>
     </section>
     </div>
     <section>
@@ -122,10 +120,10 @@
             <hr>
             <div class="int-container ">
                 <div class="card zoom-effect " style="width: 18rem;">
-                    <img src="../assets/spainpackage.jpg" class="card-img-top" alt="...">
+                    <img src="./assets/thailandtitle.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">BEST OF SPAIN</h5>
-                        <p class="card-text">Explore Spain mains with this package .</p>
+                        <h5 class="card-title">BEST OF THAILAND</h5>
+                        <p class="card-text">Explore Thailand mains with this package .</p>
                         <a href="#" class="btn btn-primary">Explore</a>
                     </div>
                 </div>
@@ -135,6 +133,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
 </body>
+
 </html>
