--- a/italy.html
+++ b/italy.html
@@ -71,16 +71,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/assets/italy1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/italy1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/italy2.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/italy2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/italy3.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/italy3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/italy4.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/italy4.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
