--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                   Destinations
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./static/ind.html">India</a></li>
-                  <li><a class="dropdown-item" href="./static/int.html">International</a></li>
-                  <li><a class="dropdown-item" href="./static/isl.html">Islands</a></li>
+                  <li><a class="dropdown-item" href="./ind.html">India</a></li>
+                  <li><a class="dropdown-item" href="./int.html">International</a></li>
+                  <li><a class="dropdown-item" href="./isl.html">Islands</a></li>
                   
                 </ul>
                 
@@ -61,7 +61,7 @@
 
       <section >
         <div class="title">
-          <img src="../assets/ABC TRAVELS.jpg" alt="" width="100%" height="900">
+          <img src="./assets/ABC TRAVELS.jpg" alt="" width="100%" height="900">
         </div>
       </section>
 
@@ -74,7 +74,7 @@
 
                       <div class="carousel-item active">
                         <div class="img-container">
-                          <img src="../assets/andaman.jpg" class="d-block w-100" alt="ANDAMAN">
+                          <img src="./assets/andaman.jpg" class="d-block w-100" alt="ANDAMAN">
                           <div class="circle-overlay circle-overlap-1">
                             <p>ANDAMAN ISLANDS <br>Nature's masterpiece <br>awaits
                           </div>
@@ -82,20 +82,20 @@
                       </div>
                       <div class="carousel-item">
                         <div class="img1-container">
-                          <img src="../assets/lakshadweep.jpg" class="d-block w-100" alt="LAKSHADWEEP"> 
+                          <img src="./assets/lakshadweep.jpg" class="d-block w-100" alt="LAKSHADWEEP"> 
                           <div class="circle-overlay circle-overlap-1">
                             <p>LAKSHADWEEP <br>Where Tranquility <br>Meets Turquoise Waters</p>
                           </div>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="../assets/singapore.jpg" class="d-block w-100" alt="SINGAPORE">
+                        <img src="./assets/singapore.jpg" class="d-block w-100" alt="SINGAPORE">
                         <div class="circle-overlay circle-overlap-1">
                           <p>SINGAPORE <br>The Lion City's <br>Charm</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="../assets/taj.jpg" class="d-block w-100" alt="TAJ" height="500">
+                        <img src="./assets/taj.jpg" class="d-block w-100" alt="TAJ" height="500">
                         <div class="circle-overlay circle-overlap-1">
                           <p>INDIAN TAJ MAHAL <br>Where Love <br>Conquers Time</p>
                         </div>
