--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
               <div class="col">
                 <a href="./int.html">
-                  <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../assets/international.jpg');background-size:cover ; background-repeat: no-repeat;">
+                  <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('./assets/international.jpg');background-size:cover ; background-repeat: no-repeat;">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                       <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">International</h3>
                       <ul class="d-flex list-unstyled mt-auto">
@@ -136,7 +136,7 @@
         
               <div class="col">
                 <a href="./ind.html">
-                  <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../assets/india.jpg');background-size:cover ; background-repeat: no-repeat;">
+                  <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('./assets/india.jpg');background-size:cover ; background-repeat: no-repeat;">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                       <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">India</h3>
                       <ul class="d-flex list-unstyled mt-auto">
@@ -149,7 +149,7 @@
         
               <div class="col">
                 <a href="./isl.html">
-                  <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('../assets/islands.jpg');background-size:cover ; background-repeat: no-repeat;">
+                  <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('./assets/islands.jpg');background-size:cover ; background-repeat: no-repeat;">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                       <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Islands </h3>
                       <ul class="d-flex list-unstyled mt-auto">
