--- a/int.html
+++ b/int.html
@@ -116,7 +116,7 @@
 
         <a href="./australia.html">
           <div  class="img-container int-img trans">
-            <img src="../assets/int-4.jpeg" alt="">
+            <img src="./assets/int-4.jpeg" alt="">
             <div class="overlap">
               <p>AUSTRALIA</p>
             </div>
