--- a/spain.html
+++ b/spain.html
@@ -27,9 +27,9 @@
                             Destinations
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../ind.html">India</a></li>
-                            <li><a class="dropdown-item" href="../int.html">International</a></li>
-                            <li><a class="dropdown-item" href="../isl.html">Islands</a></li>
+                            <li><a class="dropdown-item" href="./ind.html">India</a></li>
+                            <li><a class="dropdown-item" href="./int.html">International</a></li>
+                            <li><a class="dropdown-item" href="./isl.html">Islands</a></li>
                         </ul>
 
                     </li>
