--- a/int.html
+++ b/int.html
@@ -73,7 +73,7 @@
       <div class="container">
 
     <section  class="padd">
-      <h2>INTERNATIONAL Destinations</h2>
+      <h2>INTERNATIONAL DESTINATIONS</h2>
       <hr>
     </section>
         <div class="int-container">
