--- a/ind.html
+++ b/ind.html
@@ -76,7 +76,7 @@
       <hr>
     </section>
         <div class="int-container">
-          <a href="#">
+          <a href="./agra.html">
             <div class="img-container int-img trans">
               <img src="./assets/tajind.jpg" alt="italy">
               <div class="overlap">
@@ -86,7 +86,7 @@
           </a>
           
           
-        <a href="#">
+        <a href="./delhi.html">
           <div class="img-container int-img trans spl2">
             <img src="./assets/REDFORT.png" alt="">
             <div class="overlap">
@@ -95,7 +95,7 @@
           </div>
         </a>
 
-        <a href="#">
+        <a href="./amritsar.html">
           <div class="img-container int-img trans spl2">
             <img src="./assets/goledntemple.jpg" alt="">
             <div class="overlap">
