--- a/ind.html
+++ b/ind.html
@@ -104,7 +104,7 @@
           </div>
         </a>
 
-        <a href="#">
+        <a href="./jaipur.html">
           <div  class="img-container int-img trans spl2">
             <img src="./assets/hawamahel.jpeg" alt="">
             <div class="overlap">
@@ -113,7 +113,7 @@
           </div>
         </a>
 
-        <a href="#">
+        <a href="./karnataka.html">
           <div  class="img-container int-img trans">
             <img src="./assets/mysorepalace.jpg" alt="">
             <div class="overlap">
@@ -122,7 +122,7 @@
           </div>
         </a>
 
-        <a href="#">
+        <a href="./jammu.html">
           <div  class="img-container int-img trans spl3">
             <img src="./assets/Vaishno-Devi.jpg" alt="">
             <div class="overlap">
