--- a/amritsar.html
+++ b/amritsar.html
@@ -70,20 +70,18 @@
 
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
+                
                     <div class="carousel-item active">
-                        <img src="./assets/delhi1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/amritsar1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/REDFORT.png" class="d-block w-100" alt="...">
+                        <img src="./assets/amritsar2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/delhi3.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/amritsar3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/delhi4.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/delhi5.JPG" class="d-block w-100" alt="...">
+                        <img src="./assets//amritsar4.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -102,24 +100,25 @@
 
     <section class="about ">
         <div class="container">
-            <H2 class="mt-5">ABOUT DELHI</H2>
+            <H2 class="mt-5">ABOUT AMRITSAR</H2>
             <hr>
-            <p>Discover the Heart of India: Exploring Delhi</p>
-
-               <p> Welcome to Delhi, the vibrant capital city of India where history, culture, and modernity seamlessly blend together, offering visitors a kaleidoscope of experiences. As you embark on your journey through Delhi, prepare to be enchanted by its magnificent monuments, bustling markets, delectable cuisine, and warm hospitality.
-                </p>
             <p>
-                For those seeking a glimpse of Delhi's modern side, head to Connaught Place, a bustling commercial hub dotted with shops, restaurants, and cafes. Take a leisurely stroll through the lush greenery of Lodhi Gardens or explore the contemporary art scene at the National Gallery of Modern Art. <br>
-                Delhi's cultural tapestry comes alive through its vibrant festivals and events. Witness the grandeur of Diwali celebrations at Akshardham Temple or immerse yourself in the colorful festivities of Holi at India Gate. Don't miss the opportunity to attend cultural performances showcasing traditional music, dance, and theater at venues like the Kamani Auditorium and Siri Fort Auditorium. <br>
+                Explore the Beauty of Amritsar: A Glimpse into Punjab's Heart</p>
+
+               <p> Nestled in the heart of Punjab, Amritsar beckons travelers with its rich cultural heritage, spiritual significance, and architectural splendor. As you embark on a journey to discover the beauty of Amritsar, take a moment to explore the city's vibrant tapestry of sights and experiences.</p>
+               <p>Amritsar was a center of unrest in the late 20th century. In the 1980s, Sikh militants occupied the Golden Temple there. Prime Minister of India, Indira Gandhi, ordered Operation Blue Star (1 – 6 June 1984), an Indian military operation to remove the militants from the temple. The operation was carried out by Indian army troops equipped with tanks and armoured vehicles. While militarily successful, the operation aroused immense controversy. The government's justification for the timing and style of the attack are hotly debated. India Today magazine has ranked Operation Blue Star as among the Top 10 Political Disgraces in India.</p>
+            <p>
+                In conclusion, Amritsar captivates travelers with its rich cultural heritage, spiritual significance, and architectural splendor. From the sacred precincts of the Golden Temple to the poignant history of Jallianwala Bagh and the vibrant atmosphere of Wagah Border, Amritsar offers a glimpse into Punjab's heart and soul, inviting visitors to embark on a memorable journey of discovery and enlightenment. <br>
+                Indulge your taste buds in the rich and flavorful cuisine of Amritsar, renowned for its mouthwatering delicacies such as Amritsari Kulcha, Makki di Roti, and Sarson da Saag. From bustling street food stalls to traditional Punjabi dhabas, the city offers a culinary journey that is sure to tantalize your senses. <br>
             </p>
 
-            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN AGRA</strong></p>
-            <li>Humayun's Tomb</li>
-            <li>Qutub Minar</li>
-            <li>Lodi Garden</li>
-            <li>Akshardham Temple</li>
-            <li>Red Fort</li>
-            <li>ndia Gate</li>
+            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN AMRITSAR</strong></p>
+            <li>Golden temple</li>
+            <li>Bhagwan Valmiki Tirath Asthan</li>
+            <li>Jallianwala Bagh</li>
+            <li>Akal Takht</li>
+            <li>Gobindgarh Fort:</li>
+            <li>Durgiana Temple</li>
     </section>
     </div>
     <!-- <section>
