--- a/jaipur.html
+++ b/jaipur.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DELHI</title>
+    <title>JAIPUR</title>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -71,19 +71,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/delhi1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/jaipur1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/REDFORT.png" class="d-block w-100" alt="...">
+                        <img src="./assets/jaipur2.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/delhi3.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/jaipur3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/delhi4.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/delhi5.JPG" class="d-block w-100" alt="...">
+                        <img src="./assets/jaipur4.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -102,24 +99,23 @@
 
     <section class="about ">
         <div class="container">
-            <H2 class="mt-5">ABOUT DELHI</H2>
+            <H2 class="mt-5">ABOUT JAIPUR</H2>
             <hr>
-            <p>Discover the Heart of India: Exploring Delhi</p>
+            <p>Discover the Majestic Charms of Jaipur Tourism</p>
 
-               <p> Welcome to Delhi, the vibrant capital city of India where history, culture, and modernity seamlessly blend together, offering visitors a kaleidoscope of experiences. As you embark on your journey through Delhi, prepare to be enchanted by its magnificent monuments, bustling markets, delectable cuisine, and warm hospitality.
-                </p>
+               <p> Welcome to Jaipur, the enchanting Pink City of India, where history, culture, and architectural grandeur come together to create an unforgettable travel experience. Nestled in the royal state of Rajasthan, Jaipur captivates visitors with its vibrant bazaars, majestic forts, and ornate palaces, offering a glimpse into the opulent lifestyle of the Rajput rulers.</p>
             <p>
-                For those seeking a glimpse of Delhi's modern side, head to Connaught Place, a bustling commercial hub dotted with shops, restaurants, and cafes. Take a leisurely stroll through the lush greenery of Lodhi Gardens or explore the contemporary art scene at the National Gallery of Modern Art. <br>
-                Delhi's cultural tapestry comes alive through its vibrant festivals and events. Witness the grandeur of Diwali celebrations at Akshardham Temple or immerse yourself in the colorful festivities of Holi at India Gate. Don't miss the opportunity to attend cultural performances showcasing traditional music, dance, and theater at venues like the Kamani Auditorium and Siri Fort Auditorium. <br>
+                Immerse yourself in Jaipur's rich cultural heritage with traditional folk performances, puppet shows, and Rajasthani music that showcase the vibrant spirit of the region. Attend cultural festivals such as the Jaipur Literature Festival or the Teej Festival to witness the city come alive with music, dance, and celebrations. <br>
+                Explore the surrounding attractions of Jaipur with day trips to historic sites such as Nahargarh Fort, Jaigarh Fort, and the serene Jal Mahal (Water Palace). Experience the rural charm of Rajasthan with visits to nearby villages and witness traditional crafts such as block printing, pottery, and carpet weaving. <br>
             </p>
 
-            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN AGRA</strong></p>
-            <li>Humayun's Tomb</li>
-            <li>Qutub Minar</li>
-            <li>Lodi Garden</li>
-            <li>Akshardham Temple</li>
-            <li>Red Fort</li>
-            <li>India Gate</li>
+            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN JAIPUR</strong></p>
+            <li>Amber Fort</li>
+            <li>Hawa Mahal </li>
+            <li>City Palace</li>
+            <li>Jaigarh For</li>
+            <li>antar Mantar</li>
+            <li>Nahargarh Fort</li>
     </section>
     </div>
     <!-- <section>
