--- a/jammu.html
+++ b/jammu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DELHI</title>
+    <title>JAMMU KASHMIR</title>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -71,19 +71,10 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/delhi1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/jammu1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/REDFORT.png" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/delhi3.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/delhi4.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/delhi5.JPG" class="d-block w-100" alt="...">
+                        <img src="./assets/jammu2.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -102,24 +93,28 @@
 
     <section class="about ">
         <div class="container">
-            <H2 class="mt-5">ABOUT DELHI</H2>
+            <H2 class="mt-5">ABOUT JAMMU KASHMIR</H2>
             <hr>
-            <p>Discover the Heart of India: Exploring Delhi</p>
-
-               <p> Welcome to Delhi, the vibrant capital city of India where history, culture, and modernity seamlessly blend together, offering visitors a kaleidoscope of experiences. As you embark on your journey through Delhi, prepare to be enchanted by its magnificent monuments, bustling markets, delectable cuisine, and warm hospitality.
-                </p>
             <p>
-                For those seeking a glimpse of Delhi's modern side, head to Connaught Place, a bustling commercial hub dotted with shops, restaurants, and cafes. Take a leisurely stroll through the lush greenery of Lodhi Gardens or explore the contemporary art scene at the National Gallery of Modern Art. <br>
-                Delhi's cultural tapestry comes alive through its vibrant festivals and events. Witness the grandeur of Diwali celebrations at Akshardham Temple or immerse yourself in the colorful festivities of Holi at India Gate. Don't miss the opportunity to attend cultural performances showcasing traditional music, dance, and theater at venues like the Kamani Auditorium and Siri Fort Auditorium. <br>
-            </p>
+                
+                Welcome to the Paradise on Earth: Explore Jammu and Kashmir Tourism</p>
 
-            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN AGRA</strong></p>
-            <li>Humayun's Tomb</li>
-            <li>Qutub Minar</li>
-            <li>Lodi Garden</li>
-            <li>Akshardham Temple</li>
-            <li>Red Fort</li>
-            <li>India Gate</li>
+               <p> Nestled in the lap of the Himalayas, Jammu and Kashmir is a land of breathtaking beauty, serene landscapes, and rich cultural heritage. From snow-capped mountains to lush valleys, pristine lakes, and ancient temples, this enchanting region offers a myriad of experiences for travelers seeking adventure, tranquility, and spiritual rejuvenation</p>
+            <p>
+                Kashmir Valley: Known as "Paradise on Earth," the Kashmir Valley is renowned for its stunning natural beauty, including the iconic Dal Lake, picturesque gardens of Shalimar Bagh and Nishat Bagh, and the breathtaking vistas of Pahalgam and Gulmarg. Embark on a shikara ride on Dal Lake, stroll through the vibrant Mughal gardens, or indulge in winter sports like skiing and snowboarding in Gulmarg's snow-covered slopes. <br>
+                Perched atop the Trikuta Mountains, the Vaishno Devi Temple is one of the holiest Hindu shrines dedicated to Goddess Vaishno Devi. Pilgrims undertake a challenging trek through the picturesque hills to seek the blessings of the Goddess and experience a spiritual journey unlike any other.<br>
+            </p>
+            <P>
+                 The summer capital of Jammu and Kashmir, Srinagar is a city of timeless charm, with its iconic houseboats floating on the tranquil waters of Dal Lake, vibrant markets of Lal Chowk, and ancient shrines like Shankaracharya Temple. Explore the narrow alleys of the old city, savor traditional Kashmiri cuisine, and shop for exquisite handicrafts and Pashmina shawls in the bustling bazaars.
+            </P>
+
+            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN KARNATAKA</strong></p>
+            <li>Vaishno Devi Temple:</li>
+            <li>Raghunath Temple</li>
+            <li>Mansar Lake</li>
+            <li>Surinsar Lake</li>
+            <li>Bahu Temple</li>
+            <li>Peer Baba Dargah</li>
     </section>
     </div>
     <!-- <section>
