--- a/karnataka.html
+++ b/karnataka.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DELHI</title>
+    <title>KARNATAKA</title>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -71,19 +71,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/delhi1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/karnataka.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/REDFORT.png" class="d-block w-100" alt="...">
+                        <img src="./assets/karnataka2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/delhi3.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/karnataka3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/delhi4.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/delhi5.JPG" class="d-block w-100" alt="...">
+                        <img src="./assets/karnataka4.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -102,24 +99,30 @@
 
     <section class="about ">
         <div class="container">
-            <H2 class="mt-5">ABOUT DELHI</H2>
+            <H2 class="mt-5">ABOUT KARNATAKA</H2>
             <hr>
-            <p>Discover the Heart of India: Exploring Delhi</p>
-
-               <p> Welcome to Delhi, the vibrant capital city of India where history, culture, and modernity seamlessly blend together, offering visitors a kaleidoscope of experiences. As you embark on your journey through Delhi, prepare to be enchanted by its magnificent monuments, bustling markets, delectable cuisine, and warm hospitality.
-                </p>
             <p>
-                For those seeking a glimpse of Delhi's modern side, head to Connaught Place, a bustling commercial hub dotted with shops, restaurants, and cafes. Take a leisurely stroll through the lush greenery of Lodhi Gardens or explore the contemporary art scene at the National Gallery of Modern Art. <br>
-                Delhi's cultural tapestry comes alive through its vibrant festivals and events. Witness the grandeur of Diwali celebrations at Akshardham Temple or immerse yourself in the colorful festivities of Holi at India Gate. Don't miss the opportunity to attend cultural performances showcasing traditional music, dance, and theater at venues like the Kamani Auditorium and Siri Fort Auditorium. <br>
+                Discover Karnataka: Where Heritage Meets Adventure</p>
+
+               <p> Karnataka, the sixth largest state in India, has been ranked as the third most popular state in the country for tourism in 2014. It is home to 507 of the 3600 centrally protected monuments in India, second only to Uttar Pradesh.The State Directorate of Archaeology and Museums protects an additional 752 monuments and another 25,000 monuments are yet to receive protection</p>
+            <p>
+                North Karnataka has monuments that date back to the 5th century. Kannada royal capitals are also present here. Monuments constructed by the Badami Chalukyas monuments are located at Pattadakal, Aihole and Badami. Aihole has been called the cradle of Indian architecture and has over 125 temples and monuments built between 450 and 1100 CE. Rashtrakuta monuments at Lokapura, Bilgi and Kuknur and Kalyani Chalukyas monuments built in Gadag style of architecture at Lakkundi, Gadag, Itagi (in Koppal District) and the Vijayanagar empire temples at Vijayanagara are some examples. Hampi in Bellary district has ruins spread over an area of 125 km <br>
+                Coastal Karnataka is the stronghold of Hindu and Jain pilgrimage spots with Udupi and its many temples being the centre of Dvaita philosophy, Gokarna is known for Vedic studies, Sringeri has the first of the Shankaracharya mathas and is important for its Advaita philosophy, Karkala and Mudabidri are well known places of Jain worship and Vaishnava rituals. Exquisite Vijayanagar temples built in Chalukya – Malabar region combinational style are seen in Bhatkal, Kumta, Shirali etc. The warm beaches of Karnataka are mostly unspoiled<br>
+            </p>
+            <P>
+                Karnataka is blessed with over 300 km of pristine coastal stretch. Netrani Island of Uttara Kannada is known for coral reefs. St. Mary's Island, a few kilometres from Udupi has basalt rock formations. Sunny beaches at places like Malpe, Murdeshwar, Maravanthe, Gokarna, Kumta have spectacular mountains to the east. Agumbe, Kodachadri hills, Kemmangundi, are just a few of many hill stations that straddle the coast providing tourists sun and greenery. Unlike many crowded hill stations in South India, the hill stations of Karnataka are still mostly undiscovered and pristine.
+            </P>
+            <p>
+                South Karnataka is a unique combination of spectacular vesara style Hoysala architecture, colossal Jain monuments, colonial buildings and palaces of the Kingdom of Mysore, impregnable fort at Chitradurga and densely forested wildlife sanctuaries that offer some of the best eco-tourism available in the country.
             </p>
 
-            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN AGRA</strong></p>
-            <li>Humayun's Tomb</li>
-            <li>Qutub Minar</li>
-            <li>Lodi Garden</li>
-            <li>Akshardham Temple</li>
-            <li>Red Fort</li>
-            <li>India Gate</li>
+            <p><strong class="strong">MOST BEAUTIFUL PLACES TO VISIT IN KARNATAKA</strong></p>
+            <li>Mysore Palace</li>
+            <li>Gokarna </li>
+            <li>Chitradurga Fort</li>
+            <li>Coorg</li>
+            <li>Badami</li>
+            <li>Bangalore Palace</li>
     </section>
     </div>
     <!-- <section>
