--- a/singapore.html
+++ b/singapore.html
@@ -71,16 +71,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/assets/singapore1.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/singapore1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/singapore2.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/singapore2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/singapore3.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/singapore3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/assets/singapore4.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/singapore4.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
